--- a/index.html
+++ b/index.html
@@ -149,8 +149,14 @@
   </main>
 
   <footer>
-    <p>Silakan tekan tombol di bawah untuk mendata laptop</p>
-    <a href="https://docs.google.com/forms/d/1ByTlwmq9SlhCRJLhHKgOJXv0Aq-FGL9z2m8Su16-l_s/edit">Link</a>
+     <div class="link">
+        <p>Silakan tekan tombol di bawah untuk mendata laptop</p>
+        <a href="https://docs.google.com/forms/d/1ByTlwmq9SlhCRJLhHKgOJXv0Aq-FGL9z2m8Su16-l_s/edit">Link</a>
+    </div>
+    <div class="ig">
+        <p>Bantu Follow Dong!</p>
+        <a href="https://www.instagram.com/fliiiy_28/">Instagram</a>
+    </div>
   </footer>
 </body>
 </html>
